<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RelativeLayout
        android:id="@+id/rl_tab"
        android:layout_width="fill_parent"
        android:layout_height="70dip"
        android:layout_alignParentBottom="true"
        android:background="@mipmap/main_bottom_bg" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:gravity="center_vertical"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/btn_cartoon"
                android:layout_width="0dp"
                android:background="@null"
                android:layout_height="fill_parent"
                android:layout_weight="1.0"
                android:drawableTop="@mipmap/ic_tab_cart_pressed"
                android:paddingBottom="5dp"
                android:paddingTop="17dp"
                android:text="@string/txt_tab_cartoon"
                android:textColor="@color/blue"
                android:textSize="12sp" />

            <Button
                android:id="@+id/btn_news"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="1.0"
                android:background="@color/transparent"
                android:drawableTop="@mipmap/ic_tab_news_normal"
                android:paddingBottom="5dp"
                android:paddingTop="17dp"
                android:text="@string/txt_tab_news"
                android:textColor="@color/text_gray"
                android:textSize="12sp" />

            <Button
                android:id="@+id/btn_novel"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="1.0"
                android:background="@color/transparent"
                android:drawableTop="@mipmap/ic_tab_novel_normal"
                android:paddingBottom="5dp"
                android:paddingTop="17dp"
                android:text="@string/txt_tab_novel"
                android:textColor="@color/text_gray"
                android:textSize="12sp" />

            <Button
                android:id="@+id/btn_mine"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="1.0"
                android:background="@color/transparent"
                android:drawableTop="@mipmap/ic_tab_mine_normal"
                android:paddingBottom="5dp"
                android:paddingTop="17dp"
                android:text="@string/txt_tab_mine"
                android:textColor="@color/text_gray"
                android:textSize="12sp" />
        </LinearLayout>
    </RelativeLayout>

    <android.support.v4.app.FragmentTabHost
        android:id="@+id/tabhost_task"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_above="@+id/rl_tab">
        android:paddingBottom="70dp"
        android:layout_marginBottom="70dp"
    </android.support.v4.app.FragmentTabHost>

    <FrameLayout
        android:paddingBottom="70dp"
        android:layout_marginBottom="70dp"
        android:id="@+id/tabcontent"
        style="@style/Tab_FrameLayout" >
    </FrameLayout>

</RelativeLayout>